[gd_scene load_steps=2 format=3 uid="uid://bbiosf66wwdsb"]

[ext_resource type="Script" uid="uid://c2xebwwerlf40" path="res://menu.gd" id="1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 400.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 440.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Warcraft II"
horizontal_alignment = 1

[node name="SinglePlayerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 150.0
offset_right = 390.0
offset_bottom = 180.0
theme_override_colors/font_hover_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Single Player"

[node name="MultiplayerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 190.0
offset_right = 390.0
offset_bottom = 220.0
theme_override_colors/font_hover_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Multiplayer"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 230.0
offset_right = 390.0
offset_bottom = 260.0
theme_override_colors/font_hover_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Options"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 270.0
offset_right = 390.0
offset_bottom = 300.0
theme_override_colors/font_hover_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Quit"
